@@ -180,12 +180,12 @@ class UpsertNviCandidateHandlerTest extends LocalDynamoTest {
                                                        periodRepository);
         candidate.updateApproval(
             new UpdateStatusRequest(institutionId, ApprovalStatus.APPROVED, randomString(), randomString()));
-        var approval = candidate.toDto().approvals().get(0);
+        var approval = candidate.getApprovals().get(institutionId);
         var newUpsertRequest = createNewUpsertRequestNotAffectingApprovals(upsertCandidateRequest, institutionId);
         Candidate.upsert(newUpsertRequest, candidateRepository, periodRepository);
         var updatedCandidate = Candidate.fetchByPublicationId(newUpsertRequest::publicationId, candidateRepository,
                                                               periodRepository);
-        var updatedApproval = updatedCandidate.toDto().approvals().get(0);
+        var updatedApproval = updatedCandidate.getApprovals().get(institutionId);
 
         assertThat(updatedApproval, is(equalTo(approval)));
     }
@@ -279,11 +279,12 @@ class UpsertNviCandidateHandlerTest extends LocalDynamoTest {
 
     private UpsertCandidateRequest createNewUpsertRequestNotAffectingApprovals(UpsertCandidateRequest request,
                                                                                URI institutionId) {
-        var creatorId = request.creators().keySet().stream().toList().get(0);
+        var creatorId = request.creators().keySet().stream().toList().getFirst();
         var creator = new NviCreator(creatorId, List.of(institutionId));
         return getBuilder(request.publicationId(), request.publicationBucketUri(), creator)
                    .withInstanceType(request.instanceType())
                    .withLevel(request.level())
+                   .withPublicationChannelId(request.publicationChannelId())
                    .withDate(new PublicationDate(null, "3", Year.now().toString()))
                    .withVerifiedCreators(List.of(new NviCreator(creatorId, List.of(institutionId))))
                    .withInstitutionPoints(request.institutionPoints())
